[build-system]
requires = ['setuptools', 'wheel', 'cython', 'numpy']

[tool.poetry]
name = "wepy"
version = "0.9.5"
description = "A Weighted Ensemble simulation framework in pure Python with a focus on molecular dynamics."
authors = ["Samuel Lotz <samuel.lotz@salotz.info>"]
license = "MIT"
readme = "README.org"
homepage = "https://gitlab.com/ADicksonLab/wepy"
# packages = [
#          { include = "wepy" },
# ]

include = ["CHANGELOG.org", "examples", "LICENSE"]

[tool.poetry.dependencies]
python = "3.6"
numpy = "^1.15"
h5py = "^2.8"
networkx = ">=2"
dill = "^0.2.8"
click = "^7.0"
geomm = "^0.1.2"
# supposedly optional
mdtraj = "^1.9"
pandas = "^0.23.4"

[tool.poetry.dev-dependencies]
ipdb = "^0.11.0"
ipython = "^7.0"

[tool.poetry.scripts]
wepy = 'wepy.orchestration.cli:cli'
